Update file READ  v1.0.9

--- a/pages/detalhesdofilme.html
+++ b/pages/detalhesdofilme.html
@@ -11,7 +11,7 @@
     
     <h1>Poster</h1>
     <div class="grid">
-    <img src="https://br.web.img3.acsta.net/pictures/17/05/29/23/31/530814.jpg" alt="Homem-Aranha: De Volta ao Lar" width="300" >
+    <img src="https://br.web.img3.acsta.net/pictures/17/05/29/23/31/530814.jpg" alt="Homem-Aranha: De Volta ao Lar" class="imagem" >
     </div> 
 </div>
 </head>
