Update file READ  v1.0.11 fazendo 2 paginas

--- a/pages/Marve Spider-Man (2018).html
+++ b/pages/Marve Spider-Man (2018).html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="/css/Marve Spider-Man (2018).css">
 
-    <title>Homem-Aranha Através do  Aranhaverso (2018)</title>
+    <title>Marvel Spider-Man (2018)</title>
 </head>
 <body>
 
@@ -21,7 +21,7 @@
 
     <div class="container">
         <section class="intro">
-            <h2>Detalhes do Filme</h2>
+            <h2>Detalhes do Jogo</h2>
         </section>
         <table>
             <thead>
@@ -112,8 +112,6 @@
                 </a>
                 <h3>Wilson Fisk (Rei do Crime)</h3>
             </div>
-        </div>
-
         <div class="cards-container">
             <div class="card">
                 <a href="https://marvels-spider-man.fandom.com/wiki/Otto_Octavius" target="_blank">
@@ -133,6 +131,14 @@
                 </a>
                 <h3>Scorpion (Mac Gargan)</h3>
             </div>
+
+            <div class="card">
+                <a href="https://marvel.fandom.com/pt-br/wiki/Abutre" target="_blank">
+                    <img src="https://lh5.googleusercontent.com/proxy/4uUbd-wQzJSM7KAdEDRotLrb446E61YjlpvWMKLl5tQkWvetqIyR94orgiMiOvVy-SCy9tezFUlO3l8uHcKn_Nwz3HX-G1Bk-WLOZKRxyu-YkPW57qblC0An8eI8WFyAYq95mSYVQyzY-BntEBkN72_-EA" alt="Abutre">
+                </a>
+                <h3>Abutre</h3>
+            </div>
+        </div>
         </div>
 
         <section class="intro">
