Update file READ  v1.0.12 refazendo 3 paginas

--- a/pages/atravesdoaranhaverso.html
+++ b/pages/atravesdoaranhaverso.html
@@ -65,22 +65,6 @@
                     <th>Detalhes</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Duração</td>
-                    <td>2 horas e 20 minutos</td>
-                </tr>
-                <tr>
-                    <td>Orçamento</td>
-                    <td>US$ 100 milhões</td>
-                </tr>
-                <tr>
-                    <td>Bilheteira</td>
-                    <td>US$ 687,9 milhões (global)</td>
-                </tr>
-            </tbody>
-        </table>
-
         <h2>Personagens</h2>
         <div class="cards-container">
             <div class="card">
@@ -128,6 +112,13 @@
                 </a>
                 <h3>Homem-Aranha Índia</h3>
             </div>
+
+            <div class="card">
+                <a href="https://marvels-spider-man.fandom.com/wiki/Marvel%27s_Spider-Man" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/21/Web_of_Spider-Man_Vol_1_129-1.png/240px-Web_of_Spider-Man_Vol_1_129-1.png" alt="Homem-Aranha Índia">
+                </a>
+                <h3>Homem-Aranha (2018)</h3>
+            </div>
         </div>
 
         <section class="intro">
@@ -161,6 +152,22 @@
             <h2>📣 Recepção</h2>
             <p>A recepção também foi muito positiva devido à forma como o filme explorou o conceito de multiverso de uma maneira acessível, com várias versões do Homem-Aranha, proporcionando uma experiência única e empolgante para os fãs do personagem.</p>
         </section>
+
+        <tbody>
+            <tr>
+                <td>Duração</td>
+                <td>2 horas e 20 minutos</td>
+            </tr>
+            <tr>
+                <td>Orçamento</td>
+                <td>US$ 100 milhões</td>
+            </tr>
+            <tr>
+                <td>Bilheteira</td>
+                <td>US$ 687,9 milhões (global)</td>
+            </tr>
+        </tbody>
+    </table>
 
         <section class="intro">
             <h2>💨 Continuação</h2>
