Update file READ  v1.0.14 DEIXANDO O SITE RESPONSIVO

--- a/pages/Marve Spider-Man (2018).html
+++ b/pages/Marve Spider-Man (2018).html
@@ -130,10 +130,10 @@
             <p>O jogo segue Peter Parker, que tenta equilibrar sua vida como super-herói e suas responsabilidades pessoais. Ele enfrenta uma nova ameaça em Nova Iorque, liderada por Wilson Fisk, que busca expandir seu império criminoso. À medida que a história avança, Peter se depara com desafios que testam suas habilidades e valores, incluindo a ascensão de novos vilões e a descoberta de segredos que podem mudar sua vida para sempre.</p>
         </section>
 
+<h1>Trailer do jogo</h1>
         <div class="container" style="text-align: center; display: flex; justify-content: center; align-items: center; height: 100vh;">
-            <h2>Trailer do Jogo</h2>
             <div style="display: flex; justify-content: center;">
-                <iframe width="560" height="315" 
+                <iframe width="1600" height="900" 
                         src="https://www.youtube.com/embed/q4GdJVvdxss" 
                         title="Trailer do Filme"
                         frameborder="0"
