Update file READ  v1.0.15 trailes do site

--- a/_indexpaulo.html
+++ b/_indexpaulo.html
@@ -294,7 +294,7 @@
                     <h3>Anomalia(Enygma)</h3>
                     <!--setimo Paragrafo-->
 
-                    <p>Composta por Michael Giacchino, essa faixa traz o tema épico e jovem do Homem-Aranha.</p>
+                    <p>"Anomalia (Miles Morales)", de Enygma, é uma música que reflete as lutas internas e externas de Miles Morales, o Homem-Aranha, explorando temas como identidade, responsabilidade e crescimento pessoal.</p>
                     <!--Paragrafo-->
 
                 </div
@@ -315,7 +315,7 @@
                     <h3>Isso e ser um aranha (Shooter) </h3>
                     <!--Oitavo Titulo-->
 
-                    <p>Uma música energética e vibrante que simboliza o espírito aventureiro de Peter Parker.</p>
+                    <p>Uma música energética e vibrante que simboliza o espírito aventureiro do MIguel Ohara.</p>
                     <!--Paragrafo-->
 
                 </div>
@@ -336,7 +336,7 @@
                     <h3>NEM TODO MUNDO NASCE HERÓI 7minutos</h3>
                     <!--Nono Titulo-->
                     
-                    <p>Composta por Michael Giacchino, esta faixa traz ação e nostalgia, com foco na jornada de Peter Parker.</p>
+                    <p>Composta por 7minutoz, esta faixa traz ação e nostalgia, com foco na jornada dos 3 Peter Parker.</p>
                     <!--Paragrafo-->
 
                 </div>
