--- a/pages/HomemAranha Longede Casa.html
+++ b/pages/HomemAranha Longede Casa.html
@@ -67,7 +67,7 @@
         </table>
 
         
-        <h2>Personagens</h2>
+        <h1>Personagens</h1>
         <div class="cards-container">
             <div class="card">
                 <a href="https://spiderman-films.fandom.com/wiki/Spider-Man_(Tom_Holland)" target="_blank">
@@ -138,9 +138,8 @@
             </p>
         </section>
         <div class="container" style="display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column; text-align: center;">
-            <h2>Trailer do Filme</h2>
-            <div style="width: 100%; max-width: 560px;">
-                <iframe  
+            <h1>Trailer do Filme</h1>
+                <iframe width="1500" height="800"  
                         src="https://www.youtube.com/embed/bHzGeci_8wc" 
                         title="Trailer do Filme"
                         frameborder="0"
