--- a/pages/detalhesdofilme.html
+++ b/pages/detalhesdofilme.html
@@ -138,16 +138,14 @@
             </p>
         </section>
         <div class="container" style="display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column; text-align: center;">
-            <h2>Trailer do Filme</h2>
-            <div style="width: 100%; max-width: 560px;">
-                <iframe width="100%" height="315" 
+            <h1>Trailer do Filme</h1>
+                <iframe width="1500" height="800"  
                         src="https://www.youtube.com/embed/2x-2iYxgMFU" 
                         title="Trailer do Filme"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
                 </iframe>
-            </div>
         </div>
         
         
