Update file READ  v1.0.16 Adicionando Footer

--- a/pages/MilesMorales2020.html
+++ b/pages/MilesMorales2020.html
@@ -186,6 +186,12 @@
     <a href="sua-pagina.html">
         <button>Voltar para a Página Principal</button>
       </a>
-      
+      <footer>
+        <!--<footer>: Cria o rodapé da página.-->
+
+        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
+        <!--Informações do rodape-->
+
+    </footer><!--Fechando Rodaper-->
 </body>
 </html>
