Update file READ  v1.0.17 adcionando tabela

--- a/_indexpaulo.html
+++ b/_indexpaulo.html
@@ -22,6 +22,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
     crossorigin="anonymous">
     <link rel="stylesheet" type= "text/css" href="css/stylespaulo.css">
+    <link href="https://www.fontspace.com/avengeance-font-f13706" rel="stylesheet">
 
     <!--INTEGRITY = "é usado para garantir a integridade do arquivo carregado, ou seja, verifica se o conteúdo do arquivo não foi alterado de maneira inesperada."--> 
 
