--- a/pages/HomemAranha Longede Casa.html
+++ b/pages/HomemAranha Longede Casa.html
@@ -193,5 +193,14 @@
             <p>A sequência direta desse filme é Homem-Aranha: Além do Aranhaverso (a ser lançado em 2024), que expande ainda mais o conceito de multiverso, trazendo novas versões do Homem-Aranha e explorando as consequências das ações de Peter Parker nos eventos do filme.</p>
         </section>
     </div>
+    
+    <footer>
+        <!--<footer>: Cria o rodapé da página.-->
+
+        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
+        <!--Informações do rodape-->
+
+    </footer><!--Fechando Rodaper-->
+
 </body>
 </html>
