--- a/pages/Marve Spider-Man (2018).html
+++ b/pages/Marve Spider-Man (2018).html
@@ -180,5 +180,14 @@
             <p>Uma sequência direta, intitulada "Marvel's Spider-Man: Miles Morales", foi lançada em 2020 para o PlayStation 4 e PlayStation 5. Este jogo coloca os jogadores no papel de Miles Morales, que assume o manto de Homem-Aranha e enfrenta novos desafios em Nova Iorque. Além disso, "Marvel's Spider-Man 2" está em desenvolvimento, com lançamento previsto para 2023, expandindo ainda mais o universo do Homem-Aranha nos videogames.</p>
         </section>
     </div>
+
+    <footer>
+        <!--<footer>: Cria o rodapé da página.-->
+
+        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
+        <!--Informações do rodape-->
+
+    </footer><!--Fechando Rodaper-->
+    
 </body>
 </html>
