--- a/pages/MilesMorales2020.html
+++ b/pages/MilesMorales2020.html
@@ -183,15 +183,7 @@
             <p>A sequência direta, Marvel's Spider-Man 2, foi anunciada para 2023 e promete expandir ainda mais o universo do Homem-Aranha. Neste jogo, tanto Peter Parker quanto Miles Morales serão protagonistas jogáveis, com um foco no desenvolvimento dos dois heróis. Além disso, a presença de Venom foi confirmada, e o vilão parece ser uma parte fundamental da trama.</p>
         </section>
     </div>
-    <a href="sua-pagina.html">
-        <button>Voltar para a Página Principal</button>
-      </a>
-      <footer>
-        <!--<footer>: Cria o rodapé da página.-->
+</div>
 
-        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
-        <!--Informações do rodape-->
-
-    </footer><!--Fechando Rodaper-->
 </body>
 </html>
