--- a/pages/aranhaverso.html
+++ b/pages/aranhaverso.html
@@ -199,5 +199,12 @@
             <p>A continuação, Spider-Man: Across the Spider-Verse, foi lançada em 2023, dando continuidade à jornada de Miles Morales e explorando ainda mais o multiverso, com mais versões do Homem-Aranha e novos desafios. Uma terceira parte, Spider-Man: Beyond the Spider-Verse, já foi anunciada.</p>
         </section>
     </div>
+    <footer>
+        <!--<footer>: Cria o rodapé da página.-->
+
+        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
+        <!--Informações do rodape-->
+
+    </footer><!--Fechando Rodaper-->
 </body>
 </html>
