--- a/pages/atravesdoaranhaverso.html
+++ b/pages/atravesdoaranhaverso.html
@@ -174,5 +174,14 @@
             <p>"Homem-Aranha: Através do Aranhaverso" foi amplamente elogiado por críticos e público, destacando-se pela inovação na animação, profundidade emocional e desenvolvimento de personagens. A obra é considerada uma das melhores animações de super-heróis já feitas, recebendo altas classificações em plataformas como Rotten Tomatoes e Metacritic.</p>
         </section>
     </div>
+
+    <footer>
+        <!--<footer>: Cria o rodapé da página.-->
+
+        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
+        <!--Informações do rodape-->
+
+    </footer><!--Fechando Rodaper-->
+    
 </body>
 </html>
