--- a/pages/detalhesdofilme.html
+++ b/pages/detalhesdofilme.html
@@ -192,5 +192,14 @@
             <p>A sequência, Homem-Aranha: Longe de Casa (2019), dá continuidade à história de Peter após os eventos de Vingadores: Ultimato, com ele lidando com a perda de Tony Stark e novos desafios, incluindo a ameaça do vilão Mysterio.</p>
         </section>
     </div>
+    <footer>
+        
+        <!--<footer>: Cria o rodapé da página.-->
+
+        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
+        <!--Informações do rodape-->
+
+    </footer><!--Fechando Rodaper-->
+
 </body>
 </html>
