--- a/pages/Marvel's Spider-Man 2 (2023).html
+++ b/pages/Marvel's Spider-Man 2 (2023).html
@@ -197,6 +197,12 @@
             <p>Atualmente, Marvel's Spider-Man 2 não possui uma continuação anunciada, mas o sucesso do jogo certamente deixa portas abertas para futuras expansões do universo. Muitos especulam que o desenvolvimento de novos jogos pode seguir os rumos das histórias introduzidas no jogo, com mais vilões e maiores desafios, possivelmente incluindo a chegada de outros personagens icônicos do universo do Homem-Aranha, como Spider-Gwen ou Scarlet Spider.</p>
         </section>
     </div>
-    
+    <footer>
+        <!--<footer>: Cria o rodapé da página.-->
+
+        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
+        <!--Informações do rodape-->
+
+    </footer><!--Fechando Rodaper-->
 </body>
 </html>
