--- a/tarefa1/tafera1.html
+++ b/tarefa1/tafera1.html
@@ -24,8 +24,9 @@
         </section>
     </div>
 
+    <section class="secao-form">
     <form>
-        <h1>Calculadora de Soma</h1>
+        <h2>Calculadora de Soma</h2>
         
         <label for="numero1">Número 1</label>
         <input type="number" id="numero1" name="numero1">
@@ -35,7 +36,9 @@
 
         <button type="button" onclick="somar()">Somar</button>
 
-        <p>Resultado: <span id="resultado"></span></p>
+        <p>Resultado_soma: <span id="resultado"></span></p>
+
+    </form>
 
         <script>
             function somar() {
@@ -46,7 +49,7 @@
               document.getElementById("resultado").textContent = resultado;
             }
           </script>
-    </form>
+</section>
     
 </body>
 </html>
