--- a/_indexpaulo.html
+++ b/_indexpaulo.html
@@ -492,6 +492,23 @@
 
     </div><!--Fechando Grupo-->
 
+    <select>
+        
+        <optgroup label="Grupo 1">
+        <option>Opção 1.1</option>
+        </optgroup>
+        <optgroup label="Grupo 2">
+        <option>Opção 2.1</option>
+        <option>Opção 2.2</option>
+        </optgroup>
+        <optgroup label="Grupo 3" disabled>
+        <option>Opção 3.1</option>
+        <option>Opção 3.2</option>
+        <option>Opção 3.3</option>
+
+        </optgroup>
+        </select>
+
     <footer>
         <!--<footer>: Cria o rodapé da página.-->
 
