Update file v 1.0.1 pages concertando o codigo das paginas

--- a/pages/MilesMorales2020.html
+++ b/pages/MilesMorales2020.html
@@ -109,7 +109,8 @@
             </div>
             <div class="card">
                 <a href="https://marvels-spider-man.fandom.com/wiki/Martin_Li" target="_blank">
-                    <img src="https://pm1.aminoapps.com/6536/3fb41a5b457fef1bdad38766981aca77e7705caa_00.jpg" alt="Hobie Brown">
+            </div>
+                    <img src="https://pm1.aminoapps.com/6536/3fb41a5b457fef1bdad38766981aca77e7705caa_00.jpg" alt="Martin_Li">
                 </a>
                 <h3>Mister Negative (Martin Li)</h3>
             </div>
