--- a/pages/aranhaverso.html
+++ b/pages/aranhaverso.html
@@ -82,19 +82,19 @@
             </div>
             <div class="card">
                 <a href="https://intothespiderverse.fandom.com/wiki/Peter_Parker_(Earth-616)" target="_blank">
-                    <img src="https://preview.redd.it/how-strong-do-you-think-peter-b-parker-is-v0-97cua5lg40hb1.jpg?width=640&crop=smart&auto=webp&s=c682b208a8c86008727a51892a4ab5c002fc48d1" alt="Peter Parker">
+                    <img src="https://preview.redd.it/how-strong-do-you-think-peter-b-parker-is-v0-97cua5lg40hb1.jpg?width=640&crop=smart&auto=webp&s=c682b208a8c86008727a51892a4ab5c002fc48d1" alt="Peter B. Parker">
                 </a>
                 <h3>Peter B. Parker</h3>
             </div>
             <div class="card">
                 <a href="https://pt.wikipedia.org/wiki/Gwen_Stacy_(Aranhaverso)" target="_blank">
-                    <img src="https://images.twinkl.co.uk/tw1n/image/private/t_630/u/ux/gwen-pose-3_ver_1.png" alt" alt="Rhino (Aleksander)">
+                    <img src="https://images.twinkl.co.uk/tw1n/image/private/t_630/u/ux/gwen-pose-3_ver_1.png" alt="Spider-Gwen">
                 </a>
                 <h3>Spider-Gwen</h3>
             </div>
             <div class="card">
                 <a href="https://marvels-spider-man.fandom.com/wiki/Aaron_Davis" target="_blank">
-                    <img src="https://preview.redd.it/6shfjg2menr41.jpg?auto=webp&s=c948c4798580925574b7b04e357ada0e9b699b69" alt="Prowler (Aaron Davis)">
+                    <img src="https://preview.redd.it/6shfjg2menr41.jpg?auto=webp&s=c948c4798580925574b7b04e357ada0e9b699b69" alt="Spider-Man Noir">
                 </a>
                 <h3>Spider-Man Noir</h3>
             </div>
@@ -103,7 +103,7 @@
         <div class="cards-container">
             <div class="card">
                 <a href="https://marvels-spider-man.fandom.com/wiki/Phin_Mason" target="_blank">
-                    <img src="https://i.pinimg.com/736x/be/f2/fd/bef2fd0b324a2d3c3cf633919452c2cd.jpg" alt="Finn Mason">
+                    <img src="https://i.pinimg.com/736x/be/f2/fd/bef2fd0b324a2d3c3cf633919452c2cd.jpg" alt="Peni Parker">
                 </a>
                 <h3>Peni Parker</h3>
             </div>
@@ -111,7 +111,7 @@
             <div class="cards-container">
                 <div class="card">
                     <a href="https://pt.wikipedia.org/wiki/Spider-Ham" target="_blank">
-                        <img src="https://i.pinimg.com/736x/05/aa/a2/05aaa23c1aaf9a04dd22ebc05a0e2271.jpg" alt="Finn Mason">
+                        <img src="https://i.pinimg.com/736x/05/aa/a2/05aaa23c1aaf9a04dd22ebc05a0e2271.jpg" alt="Spider-Ham">
                     </a>
                     <h3>Spider-Ham</h3>
                 </div>
@@ -119,7 +119,7 @@
                 <div class="cards-container">
                     <div class="card">
                         <a href="https://viloes.fandom.com/pt-br/wiki/Rei_do_Crime_(Homem-Aranha_no_Aranhaverso)" target="_blank">
-                            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/4/46/Kingpin_Marvel.jpg/250px-Kingpin_Marvel.jpg" alt="Finn Mason">
+                            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/4/46/Kingpin_Marvel.jpg/250px-Kingpin_Marvel.jpg" alt="Rei do Crime (Wilson Fisk)">
                         </a>
                         <h3>Rei do Crime (Wilson Fisk)</h3>
                     </div>
@@ -127,7 +127,7 @@
                     <div class="cards-container">
                         <div class="card">
                             <a href="https://viloes.fandom.com/pt-br/wiki/Gatuno_(Homem-Aranha_No_Aranhaverso)" target="_blank">
-                                <img src="https://i.pinimg.com/736x/ca/f4/a6/caf4a6c0d5724d560e640bb9924d2a72.jpg" alt="Finn Mason">
+                                <img src="https://i.pinimg.com/736x/ca/f4/a6/caf4a6c0d5724d560e640bb9924d2a72.jpg" alt="Gatuno  (Aaron Davis)">
                             </a>
                             <h3>Gatuno  (Aaron Davis)</h3>
                         </div>
@@ -199,12 +199,6 @@
             <p>A continuação, Spider-Man: Across the Spider-Verse, foi lançada em 2023, dando continuidade à jornada de Miles Morales e explorando ainda mais o multiverso, com mais versões do Homem-Aranha e novos desafios. Uma terceira parte, Spider-Man: Beyond the Spider-Verse, já foi anunciada.</p>
         </section>
     </div>
-    <footer>
-        <!--<footer>: Cria o rodapé da página.-->
-
-        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
-        <!--Informações do rodape-->
-
-    </footer><!--Fechando Rodaper-->
+    
 </body>
 </html>
