--- a/pages/atravesdoaranhaverso.html
+++ b/pages/atravesdoaranhaverso.html
@@ -115,7 +115,7 @@
 
             <div class="card">
                 <a href="https://marvels-spider-man.fandom.com/wiki/Marvel%27s_Spider-Man" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/21/Web_of_Spider-Man_Vol_1_129-1.png/240px-Web_of_Spider-Man_Vol_1_129-1.png" alt="Homem-Aranha Índia">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/21/Web_of_Spider-Man_Vol_1_129-1.png/240px-Web_of_Spider-Man_Vol_1_129-1.png" alt="Homem-Aranha (2018)">
                 </a>
                 <h3>Homem-Aranha (2018)</h3>
             </div>
@@ -175,13 +175,5 @@
         </section>
     </div>
 
-    <footer>
-        <!--<footer>: Cria o rodapé da página.-->
-
-        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
-        <!--Informações do rodape-->
-
-    </footer><!--Fechando Rodaper-->
-    
 </body>
 </html>
