--- a/pages/detalhesdofilme.html
+++ b/pages/detalhesdofilme.html
@@ -77,19 +77,19 @@
             </div>
             <div class="card">
                 <a href="https://marvelcinematicuniverse.fandom.com/wiki/Nick_Fury" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/c/c8/Samuel_L._Jackson_as_Nick_Fury_in_The_Avengers_%282012_film%29.jpg" alt="Peter Parker">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/c/c8/Samuel_L._Jackson_as_Nick_Fury_in_The_Avengers_%282012_film%29.jpg" alt="Nick Fury (Samuel L. Jackson)">
                 </a>
                 <h3>Nick Fury (Samuel L. Jackson)</h3>
             </div>
             <div class="card">
                 <a href="https://i.pinimg.com/564x/80/2f/30/802f30d476bc924cde9dbdceeca48347.jpg" target="_blank">
-                    <img src="https://i.pinimg.com/236x/53/da/07/53da070b6c96437d189f7a26310f5d91.jpg" alt" alt="Rhino (Aleksander)">
+                    <img src="https://i.pinimg.com/236x/53/da/07/53da070b6c96437d189f7a26310f5d91.jpg" alt="MJ (Zendaya)">
                 </a>
                 <h3>MJ (Zendaya)</h3>
             </div>
             <div class="card">
                 <a href="https://marvel-cinematic.fandom.com/pt-br/wiki/Adrian_Toomes" target="_blank">
-                    <img src="https://p2.trrsf.com/image/fget/cf/940/0/images.terra.com/2021/11/19/396922420-thevulture-michaelkeaton-spidermanhomecoming.jpg" alt="Prowler (Aaron Davis)">
+                    <img src="https://p2.trrsf.com/image/fget/cf/940/0/images.terra.com/2021/11/19/396922420-thevulture-michaelkeaton-spidermanhomecoming.jpg" alt="Adrian Toomes / Abutre (Michael Keaton)">
                 </a>
                 <h3>Adrian Toomes / Abutre (Michael Keaton)</h3>
             </div>
@@ -98,7 +98,7 @@
         <div class="cards-container">
             <div class="card">
                 <a href="https://marvel.fandom.com/wiki/Anthony_Stark_(Earth-616)" target="_blank">
-                    <img src="https://t.ctcdn.com.br/M7_M1ESMxfR2DCICse-_vFGE7jA=/1080x1080/smart/i490793.jpeg" alt="Finn Mason">
+                    <img src="https://t.ctcdn.com.br/M7_M1ESMxfR2DCICse-_vFGE7jA=/1080x1080/smart/i490793.jpeg" alt="Tony Stark / Homem de Ferro (Robert Downey Jr.)">
                 </a>
                 <h3>Tony Stark / Homem de Ferro (Robert Downey Jr.)</h3>
             </div>
@@ -106,7 +106,7 @@
             <div class="cards-container">
                 <div class="card">
                     <a href="https://pt.wikipedia.org/wiki/Spider-Ham" target="_blank">
-                        <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQvkXxY4OjbVk1DkCofN9CnGg-HZ-Bv9DnbLp9Q7yzprl9gDp4IqWOi9ltUaMqInf9AVGeJQPvFiZsP_wCgiBzDAyBsZNNAwckWo7RaATY" alt="Finn Mason">
+                        <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQvkXxY4OjbVk1DkCofN9CnGg-HZ-Bv9DnbLp9Q7yzprl9gDp4IqWOi9ltUaMqInf9AVGeJQPvFiZsP_wCgiBzDAyBsZNNAwckWo7RaATY" alt="Tia May (Marisa Tomei)">
                     </a>
                     <h3>Tia May (Marisa Tomei)</h3>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="cards-container">
                     <div class="card">
                         <a href="https://spiderman-films.fandom.com/wiki/Happy_Hogan_(Jon_Favreau)" target="_blank">
-                            <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/marvel-studios-cinematic-universe/a/a3/Hogan5.png" alt="Finn Mason">
+                            <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/marvel-studios-cinematic-universe/a/a3/Hogan5.png" alt="Happy Hogan (Jon Favreau)">
                         </a>
                         <h3>Happy Hogan (Jon Favreau)</h3>
                     </div>
@@ -122,7 +122,7 @@
                     <div class="cards-container">
                         <div class="card">
                             <a href="https://marvelcinematicuniverse.fandom.com/wiki/Ned_Leeds" target="_blank">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8Mc-WxsAQ4E8M1KULZtcwoOIEB3PxbtUlbQ&s" alt="Finn Mason">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8Mc-WxsAQ4E8M1KULZtcwoOIEB3PxbtUlbQ&s" alt="Ned Leeds">
                             </a>
                             <h3>Ned Leeds</h3>
                         </div>
@@ -192,14 +192,6 @@
             <p>A sequência, Homem-Aranha: Longe de Casa (2019), dá continuidade à história de Peter após os eventos de Vingadores: Ultimato, com ele lidando com a perda de Tony Stark e novos desafios, incluindo a ameaça do vilão Mysterio.</p>
         </section>
     </div>
-    <footer>
-        
-        <!--<footer>: Cria o rodapé da página.-->
-
-        <p>Catálogo do CineVibes &copy; 2024. Todos os direitos reservados.</p>
-        <!--Informações do rodape-->
-
-    </footer><!--Fechando Rodaper-->
-
+   
 </body>
 </html>
