--- a/pages/MilesMorales2020.html
+++ b/pages/MilesMorales2020.html
@@ -31,6 +31,10 @@
                 <ul class="navbar-nav">
                     <!--Inicio do LI = "Define o item SOBRE O SITE"-->
                     <li class="nav-item active">
+                        <a class="nav-link" href="/_indexpaulo.html">Ínicio</a>
+                        <!--HREF = "Especifica o destino de um link."-->
+                    </li>
+                    <li class="nav-item active">
                         <a class="nav-link" href="#Detalhes do Jogo">detalhe</a>
                         <!--HREF = "Especifica o destino de um link."-->
                     </li>
