mudando o backgroud da pagina principal

--- a/_indexpaulo.html
+++ b/_indexpaulo.html
@@ -137,6 +137,14 @@
     <!--Fechando a navegação-->
    </section>
 
+ 
+   <div class="container">
+    <img src="" alt="" class="imagem">
+    <div class="texto">
+        <h1></h1> <!-- Fechando a tag <h1> -->
+    </div>
+</div>
+
     <header>
         <!--é usada para definir a seção de cabeçalho de uma página ou de uma parte específica da página. Normalmente, contém elementos como título, navegação ou logotipo.-->
 
